[package]
name = "diffeq"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Differential Equations in rust"
documentation = "https://docs.rs/diffeq/"
repository = "https://github.com/mattsse/diffeq-rs"
keywords = ["math", "algebra", "differential", "equations"]
categories = ["science"]
edition = "2018"

[dependencies]
nalgebra = "0.18"
num = "0.2"
alga = "0.9"
derive_builder = "0.7"
num-traits = "0.2"
itertools-num = "0.1"
snafu = "0.5"
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
problems = []
plot = []
serde0 = ["serde"]
