[package]
name = "diffeq"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Differential Equations in rust"
documentation = "https://docs.rs/diffeq/"
repository = "https://github.com/mattsse/diffeq-rs"
keywords = ["math", "algebra", "differential", "equations"]
categories = ["science"]
edition = "2018"
exclude = [
    "diffeq-example-wasm"
]

[dependencies]
nalgebra = "0.19"
num = "0.2"
alga = "0.9"
derive_builder = "0.9"
num-traits = "0.2"
itertools-num = "0.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "1.0"

[features]
serde0 = ["serde"]


[workspace]
members = ["diffeq-example-wasm"]